; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_cipher.c_add_zeros_and_len_padding.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_cipher.c_add_zeros_and_len_padding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i64)* @add_zeros_and_len_padding to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_zeros_and_len_padding(i8* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8, align 1
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = sub i64 %9, %10
  store i64 %11, i64* %7, align 8
  store i8 0, i8* %8, align 1
  store i8 1, i8* %8, align 1
  br label %12

12:                                               ; preds = %25, %3
  %13 = load i8, i8* %8, align 1
  %14 = zext i8 %13 to i64
  %15 = load i64, i64* %7, align 8
  %16 = icmp ult i64 %14, %15
  br i1 %16, label %17, label %28

17:                                               ; preds = %12
  %18 = load i8*, i8** %4, align 8
  %19 = load i64, i64* %6, align 8
  %20 = load i8, i8* %8, align 1
  %21 = zext i8 %20 to i64
  %22 = add i64 %19, %21
  %23 = sub i64 %22, 1
  %24 = getelementptr inbounds i8, i8* %18, i64 %23
  store i8 0, i8* %24, align 1
  br label %25

25:                                               ; preds = %17
  %26 = load i8, i8* %8, align 1
  %27 = add i8 %26, 1
  store i8 %27, i8* %8, align 1
  br label %12

28:                                               ; preds = %12
  %29 = load i64, i64* %7, align 8
  %30 = trunc i64 %29 to i8
  %31 = load i8*, i8** %4, align 8
  %32 = load i64, i64* %5, align 8
  %33 = sub i64 %32, 1
  %34 = getelementptr inbounds i8, i8* %31, i64 %33
  store i8 %30, i8* %34, align 1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
